--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -460,6 +460,7 @@
         "enabled": "Enabled",
         "enableDeveloperMode": "Enable Developer Mode",
         "enableDisableBalanceColor": "Enable/Disable Balance Color",
+        "enableEGPUSupport": "Enable eGPU Support (requires macOS 10.13.4+)",
         "enableFilenamePrefix": "Enable Filename Prefix",
         "enableHacksShortcuts": "Control CommandPost Shortcuts within Final Cut Pro",
         "enableHUD": "Enable HUD",
@@ -543,6 +544,7 @@
         "finalcutpro_commands_label": "Final Cut Pro Keyboard Commands",
         "finalcutpro_console_font_label": "Console: Font",
         "finalcutpro_console_label": "Console",
+        "finalcutpro_egpu_label": "eGPU Support",
         "finalcutpro_export_batch_label": "Batch Export",
         "finalcutpro_export_batch_manager_label": "Manager: Batch Export",
         "finalcutpro_feedback_bugreport_label": "Help & Support: Report Bug to Apple",
