#1380 * Added a check to ensure the Timeline has a project/compound clip loaded before continuing.

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -502,6 +502,9 @@
         "failedToWriteToPreferences": "Failed to write to the Final Cut Pro Preferences file.",
         "favourite": "Favourite",
         "favourites": "Favourites",
+        "fcpMediaFolder_Error_ProjectRequire": "There must be a Project or Compound Clip in the Timeline.",
+        "fcpMediaFolder_Error_ShowTimeline": "Unable to show the Timeline",
+        "fcpMediaFolder_Error_UnableToPaste": "Unable to add '{file}' to the Pasteboard.",
         "fcpMediaFolderCancel": "Cancel",
         "fcpMediaFolderImport": "Import",
         "fcpMediaFolderImportAll": "All Files",
