--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1009,6 +1009,7 @@
         "scanFinalCutPro": "Scan Final Cut Pro",
         "scanFinalCutProSetupOne": "CommandPost needs to scan your system for Final Cut Pro for Plugins & Motion Templates.",
         "scanFinalCutProSetupTwo": "Depending on how many plugins and effects you have installed, this can take several minutes.",
+        "scanningInProgress": "Scanning in progress",
         "scrollingTimelineActivated": "Scrolling Timeline Activated",
         "scrollingTimelineDeactivated": "Scrolling Timeline Deactivated",
         "searchSubtext": "Search Subtext",
@@ -1132,10 +1133,11 @@
         "ten": "10",
         "testTitle": "CommandPost Test",
         "textToSpeechDestination": "Please select where you want to save your audio files:",
+        "thisCanTakeSeveralMinutes": "This can take several minutes",
         "thisIsATest": "This is a test",
         "three": "3",
-        "timeline": "Timeline",
         "timeline_group": "Timeline",
+        "timeline": "Timeline",
         "timelineHistory": "Timeline History",
         "timelineZoom": "Timeline Zoom",
         "timelineZoom9": "Zoom",
