--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -766,12 +766,14 @@
         },
         "japanese": "Japanese",
         "joinClips": "Join Clips",
+    	"key": "Key",
         "keyboardShortcuts": "Keyboard Shortcuts",
         "keyframe": "Keyframe",
         "keywordEditorNotOpened": "The Keyword Editor could not be opened.",
         "keywordKeyboardShortcutsNotOpened": "The Keyword Editor's Keyboard Shortcuts section could not be opened.",
         "keywordPresetsRestored": "Your Keywords have been restored to Preset",
         "keywordPresetsSaved": "Your Keywords have been saved to Preset",
+        "label": "Label",
         "language": "Language",
         "languageHeading": "Language",
         "launch": "Launch",
@@ -832,6 +834,7 @@
         "mix": "Mix",
         "mix4": "Mix",
         "mode": "Mode",
+        "modifier": "Modifier",
         "modifierKey": "Modifier Key",
         "monitor": "Monitor",
         "mountExternalDrives_title": "Mount External Drives",
@@ -1077,9 +1080,6 @@
         "shortcutDuplicateError": "You cannot use the same shortcut for multiple commands.",
         "shortcutPleaseTryAgain": "Please select a new key and/or modifier combination and try again.",
         "shortcutsGroup": "Group",
-        "shortcutsKey": "Key",
-        "shortcutsLabel": "Label",
-        "shortcutsModifier": "Modifier",
         "shortcutsPanelLabel": "Shortcuts",
         "shortcutsPanelTooltip": "Keyboard Shortcuts",
         "shortcutsResetConfirmation": "This will reset all modified shortcuts to the default values.",
