--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -39,6 +39,7 @@
         "apple": "Apple",
         "application": "Application",
         "applicationAPIKey": "Application API Key",
+        "apply": "Apply",
         "applyColorCorrectionFromPreviousClip": "Apply Color Correction from Previous Clip",
         "applyColorCorrectionFromThreeClipsBack": "Apply Color Correction from Three Clips Back",
         "applyColorCorrectionFromTwoClipsBack": "Apply Color Correction from Two Clips Back",
