--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -442,7 +442,7 @@
         "downloadTangentHub": "Download Tangent Hub",
         "doYouWantToContinue": "Do you want to continue?",
         "draggable": "Draggable",
-        "draggableGuide": "Draggable Guide",
+        "draggableGuides": "Draggable Guides",
         "driveManagement": "Drive Management",
         "edit": "Edit",
         "eight": "8",
