--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -340,6 +340,9 @@
         "cpRestoreKeywordPreset_customTitle": "Restore Keyword Preset %{count}",
         "cpRevealInBrowserAndHighlight_title": "Reveal in Browser and Highlight",
         "cpRevealMulticamClipInAngleEditorAndHighlight_title": "Reveal Multicam Clip in Angle Editor",
+		"cpSetSpatialConformTypeToFill_title": "Set Spatial Conform Type to Fill",
+		"cpSetSpatialConformTypeToFit_title": "Set Spatial Conform Type to Fit",
+		"cpSetSpatialConformTypeToNone_title": "Set Spatial Conform Type to None",
         "cpRevealMulticamClipInBrowserAndHighlight_title": "Reveal Multicam Clip in Browser",
         "cpSaveKeywordPreset_customTitle": "Save Keyword Preset %{count}",
         "cpScrollingTimeline_title": "Toggle Scrolling Timeline",
