--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -575,6 +575,7 @@
         "finalcutpro_hud_label": "HUD",
         "finalcutpro_import_ignorecard_label": "Ignore Cards",
         "finalcutpro_import_preferences_label": "Import Preferences",
+        "finalcutpro_inspector_video_label": "Inspector: Video",
         "finalcutpro_language_label": "Final Cut Pro Languages",
         "finalcutpro_menu_administrator_advancedfeatures_label": "Menubar: Advanced Features",
         "finalcutpro_menu_administrator_label": "Menubar: Administrator",
