--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -27,6 +27,9 @@
         "advancedPanelLabel": "Advanced",
         "advancedPanelTooltip": "Advanced Preferences",
         "alignAudioToVideo": "Align Audio to Video",
+        "alignTextToTheLeft_title": "Align text to the left",
+        "alignTextToTheCentre_title": "Align text to the centre",
+    	"alignTextToTheRight_title": "Align text to the right",
         "all": "All",
         "allowZoomingWithModifierKey": "Enable Timeline Zooming with Mouse Scroll & Modifier Key",
         "alreadyWatched": "This folder is already being watched.",
@@ -766,9 +769,13 @@
             "one": "item",
             "other": "items"
         },
+		"justifyAll_title": "Justify all",
+		"justifyLastCentre_title": "Justify last centre",
+		"justifyLastRight_title": "Justify last right",
+    	"key": "Key",
         "japanese": "Japanese",
         "joinClips": "Join Clips",
-    	"key": "Key",
+        "justifyLastLeft": "Justify last left",
         "keyboardShortcuts": "Keyboard Shortcuts",
         "keyframe": "Keyframe",
         "keywordEditorNotOpened": "The Keyword Editor could not be opened.",
